# Trek

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
src/: configuration.py  file_manager.py  main.py  migration_manager.py  migration_runner.py  models.py  utils.py
tests/: Trek.Manifest.json
tests/Tables/: 0001_BACKWARDS.sql  0001_CREATE_TABLE_ACCOUNTS.SQL  0002_BACKWARDS.sql  0002_CREATE_TABLE_TEST2.SQL
trek/: database_providers.py  file_manager.py  logger.py  main.py  migration_manager.py  migration_runner.py
trek/templates/: __Migrations.sql
